- [UNIREG-2214] Date d'ouverture des rapports entre tiers suite à une arrivée - Association des habitants nouvellement créés aux événements civils regroupés après traitement
git-svn-id: https://svn.etat-de-vaud.ch/SVN_SOCLE/registre/unireg/trunk@40713 cb3efa0a-b8b0-9f43-a4c8-343d8b7e4362